--- a/rancher/rancher_kubernetes_cluster.yml
+++ b/rancher/rancher_kubernetes_cluster.yml
@@ -1,4 +1,8 @@
 cluster_name: cluster-rke
+network:
+    http_proxy: https://10.31.255.35:8080
+    https_proxy: https://10.31.255.35:8080
+    no_proxy: localhost,127.0.0.1,0.0.0.0,192.168.33.20,192.168.33.10,master,slave
 nodes:
 - address: master
   user: vagrant
